fixed svg size and graph positioning, fixed html y-overflow, small refactoring
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/visualisation@25051 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/core/counterexample/report.css
+++ b/src/org/sosy_lab/cpachecker/core/counterexample/report.css
@@ -1,6 +1,7 @@
 html {
 	position: relative;
 	height: 100%;
+	overflow-y:hidden;
 }
 
 body {
@@ -246,7 +247,6 @@ div pre {
 }
 
 .cfa-graph {
-	margin-top: 35px;
 	visibility: hidden;
 }
 
